Minor dark mode fixes

--- a/style/themes/dark.css
+++ b/style/themes/dark.css
@@ -423,7 +423,7 @@ table.striped tr:nth-child(2n-1) {
 
 .route-number {
     color: #FFFFFF;
-    border-color: #FFFFFF;
+    border-color: #393939;
     background-color: #989898;
 }
 
@@ -478,12 +478,12 @@ table.striped tr:nth-child(2n-1) {
 }
 
 .tooltip-anchor .tooltip {
-    background-color: #565656;
+    background-color: #2F2F2F;
     color: #FFFFFF;
 }
 
 .tooltip-anchor .tooltip::after {
-    border-color: transparent #565656 transparent transparent;
+    border-color: transparent #2F2F2F transparent transparent;
 }
 
 .weekdays a.weekday.no-service:hover {
